--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "eslint-plugin-n": "^15.4.0",
     "eslint-plugin-promise": "^6.1.1",
     "vitest": "^0.24.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
