--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "vitest": "^0.24.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.0"
